# cinq

./: .gitignore  CMakeLists.txt  README.md
include/cinq/: cinq.hpp  enumerable.hpp  from.hpp  join.hpp  sum.hpp  where.hpp
test/: CMakeLists.txt  join_test.cpp  sum_test.cpp  test.cpp  where_test.cpp
